--- a/CpmDemoApp/CpmDemoApp.csproj
+++ b/CpmDemoApp/CpmDemoApp.csproj
@@ -7,10 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.AI.OpenAI" Version="2.0.0-beta.3" />
-    <PackageReference Include="Azure.Communication.Messages" Version="1.0.0" />
-    <PackageReference Include="Azure.Messaging.EventGrid" Version="4.24.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta1" />
+    <PackageReference Include="Azure.AI.OpenAI" Version="2.1.0" />
+    <PackageReference Include="Azure.Communication.Messages" Version="1.1.0" />
+    <PackageReference Include="Azure.Messaging.EventGrid" Version="4.30.0" />
+    <PackageReference Include="Azure.Search.Documents" Version="11.6.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
